k8s/monitoring/grafana/03-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
    - host: grafana.joewalton.me
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
